# ImplicitBooleanCSG

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
include/: ImplicitSurfaces.h  Renderer.h
shaders/: common_sdf.glsl  fragment.frag  scene_complex.frag  scene_custom.frag  scene_difference.frag  scene_intersection.frag  scene_sphere.frag  scene_union.frag  vertex.vert
src/: Renderer.cpp  main.cpp
